--- a/app/src/main/res/layout/currency_list_fragment.xml
+++ b/app/src/main/res/layout/currency_list_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -8,5 +7,18 @@
             android:id="@+id/currencyRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+    <TextView
+            android:id="@+id/errorView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/unknown_error"/>
+
+    <ProgressBar
+            android:id="@+id/progressView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
 
 </FrameLayout>
